force-app/main/default/objects/CM_Component__c/CM_Component__c.object-meta.xml
<CustomObject>
    <description>This Change Management object contains each changed component for a specific backlog item.</description>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>