force-app/main/default/objects/CM_Component__c/fields/Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item__c</fullName>
    <description>This relationship shows the parent Backlog Item to which these components are associated.</description>
    <inlineHelpText>For which Backlog Item has this component been changed?</inlineHelpText>
    <label>Backlog Item</label>
    <referenceTo>CM_Backlog_Item__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>