force-app/main/default/objects/CM_Component__c/fields/Code_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Review_Date__c</fullName>
    <label>Code Review Date</label>
    <type>Date</type>
</CustomField>