force-app/main/default/objects/CM_Component__c/fields/Code_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Code_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>