force-app/main/default/objects/CM_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>Type of component/module  that was changed.</description>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class</fullName>
            </value>
            <value>
                <fullName>Test Class</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Static Resource</fullName>
            </value>
            <value>
                <fullName>Apex: Anonymous Script</fullName>
            </value>
            <value>
                <fullName>Report Type</fullName>
            </value>
            <value>
                <fullName>Object: Entire Object</fullName>
            </value>
            <value>
                <fullName>Object: Field</fullName>
            </value>
            <value>
                <fullName>Object: Custom Button (Weblink)</fullName>
            </value>
            <value>
                <fullName>Object: Custom Link (Weblink)</fullName>
            </value>
            <value>
                <fullName>Object: Action Override</fullName>
            </value>
            <value>
                <fullName>Object: Business Process</fullName>
            </value>
            <value>
                <fullName>Object: Field Set</fullName>
            </value>
            <value>
                <fullName>Object: ListView</fullName>
            </value>
            <value>
                <fullName>Object: Named Filter</fullName>
            </value>
            <value>
                <fullName>Object: Record Type</fullName>
            </value>
            <value>
                <fullName>Object: Search Layout</fullName>
            </value>
            <value>
                <fullName>Object: Validation Rule</fullName>
            </value>
            <value>
                <fullName>Workflow: Entire Workflow</fullName>
            </value>
            <value>
                <fullName>Workflow: Rule</fullName>
            </value>
            <value>
                <fullName>Workflow: Field Update</fullName>
            </value>
            <value>
                <fullName>Workflow: Alert</fullName>
            </value>
            <value>
                <fullName>Workflow: Outbound Message</fullName>
            </value>
            <value>
                <fullName>Workflow: Task</fullName>
            </value>
            <value>
                <fullName>Custom Application</fullName>
            </value>
            <value>
                <fullName>Custom Label</fullName>
            </value>
            <value>
                <fullName>Custom Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>