force-app/main/default/objects/CM_Component__c/fields/Git_Diff_Command_Line__c.field-meta.xml
<CustomField>
    <fullName>Git_Diff_Command_Line__c</fullName>
    <formula>IF(  ISPICKVAL(Deployment_Action__c, 'Update'),
"git difftool " + Backlog_Item__r.Sprint__r.Base_Tag__c + " " +
CASE(
     TEXT(Component_Type__c ), 'Class', 'src/classes', 'Test Class', 'src/classes', 'Page', 'src/pages', 'Trigger', 'src/triggers', 'Component', 'src/components', 'Apex: Anonymous Script', 'scripts', 'other'
            )
 + "/" +  Name,
'Not Available on Create')</formula>
    <label>Git Diff Command Line</label>
    <type>Text</type>
</CustomField>