force-app/main/default/objects/CM_Component__c/fields/Github_com_Link__c.field-meta.xml
<CustomField>
    <fullName>Github_com_Link__c</fullName>
    <formula>IF(  Requires_Review__c, 
HYPERLINK( "https://github.com/aaancnu/mrm/blob/master/" +
CASE(
TEXT(Component_Type__c ), 'Class', 'src/classes', 'Test Class', 'src/classes', 'Page', 'src/pages', 'Trigger', 'src/triggers', 'Component', 'src/components', 'Apex: Anonymous Script', 'scripts',  'Static Resource', 'src/staticresources', 'other'
)
+ "/" + Name, "File on Github.com"),
"Not stored on Github.com")</formula>
    <label>Github.com Link</label>
    <type>Text</type>
</CustomField>