force-app/main/default/objects/CM_Component__c/fields/Link_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Process__c</fullName>
    <inlineHelpText>Drop in the link to the Boomi Process</inlineHelpText>
    <label>Link to Process</label>
    <type>Url</type>
</CustomField>