force-app/main/default/objects/CM_Component__c/fields/Requires_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Review</label>
    <type>Checkbox</type>
</CustomField>