force-app/main/default/objects/CM_Component__c/fields/Source_Component__c.field-meta.xml
<CustomField>
    <fullName>Source_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Component</label>
    <referenceTo>Source_Component__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>