force-app/main/default/objects/CM_Component__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <formula>Backlog_Item__r.Sprint__r.Name</formula>
    <label>Sprint</label>
    <type>Text</type>
</CustomField>