force-app/main/default/objects/CM_Component__c/recordTypes/Boomi_Process.recordType-meta.xml
<RecordType>
    <fullName>Boomi_Process</fullName>
    <active>true</active>
    <description>Boomi Process/Sub Process</description>
    <label>Boomi Process</label>
</RecordType>