force-app/main/default/objects/CM_Component__c/recordTypes/Salesforce_Component.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Component</fullName>
    <active>true</active>
    <description>Salesforce Component (Apex Class, Visualforce Page, Trigger, etc...)</description>
    <label>Salesforce Component</label>
</RecordType>