force-app/main/default/objects/CM_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deployment_Action__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Requires_Review__c</columns>
    <columns>Code_Review_Date__c</columns>
    <columns>Code_Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>