force-app/main/default/objects/CM_Component__c/listViews/All_Deletes.listView-meta.xml
<ListView>
    <fullName>All_Deletes</fullName>
    <columns>NAME</columns>
    <columns>Deployment_Action__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Requires_Review__c</columns>
    <columns>Code_Review_Date__c</columns>
    <columns>Code_Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deployment_Action__c</field>
        <operation>equals</operation>
        <value>Delete</value>
    </filters>
    <label>All Deletes</label>
</ListView>